# dui_prototyping

downloaded_tutorial_examples/materials-python-concurrency-/: requirements.txt
dui2_docs/: .~lock.dui2gui_layout.odg#  DUI2_XUI_Overview.docx  DUI_Cloud_Requirements.odt  answers4eugene.odt  dui2gui_layout.odg  proposal_4_xui.odt
lui_testing/: prepare_chain.sh  rename_loop.py  tst_mkdir.py
lui_testing/PyQt4_toys/: scrollable_img.py  slider_example_pyside2.py  stacked_widgets_exampl_01.py  web_html_test_simple.py
lui_testing/PyQt5_toys/: web_tst.py  web_tst_01.py  web_tst_02.py
lui_testing/back_up_4_dui/: masking.py
lui_testing/dials_img_tr_test/: copy_pasted.py  test.ui  test01.py  test02.py  test02.ui  test_03.py  test_04_w_PyQt4.py  tst_1.py  tst_2.py
lui_testing/html_react_toy/: main.html
lui_testing/imgs_n_numpy_n_sockets/: np_n_files.py  np_n_files_01.py
lui_testing/main_tree_dev/: README.md  all_local_gui.py  client_gui.py  gui_deps.py  http_server_w_cors.py  qt_libs.py  simple.ui  tree_nav.py
lui_testing/mini_idials/: cli_utils.py  m_idials.py
lui_testing/pyscript_toys/: index.html  main.py
lui_testing/python_mic/: fourier_series_approximation.py  integrate_quad.py  numeric_sorting.py  tree_nav_09.py  write_utf8_phil.py
lui_testing/reactjs_toys/: button_n_request_n_cors_test.js  button_n_request_trans_2_next_page.js  button_n_text_in.html  button_n_text_n_request.html  button_n_text_trans_2_next_page.js  dual_counter_buttons.html  dummy_button.html  (+2 more)
lui_testing/toml_tst/: pyproject.toml
lui_testing/toml_tst/src/: __main__.py
(+453 files in other folders)
